--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 		"silverstripe/framework": "3.1.2",
 		"silverstripe-themes/simple": "*",
 		"silverstripe/event-calendar": "*",
+		"colymba/gridfield-bulk-editing-tools": "*",
 		"silverstripe/tagfield": "dev-master"
 	},
 	"config": {
