--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ silverstripe-cache
 .settings
 .idea
 .DS_Store
-
-
 .sass-cache/*
 *.scssc
 html/*
@@ -33,10 +31,12 @@ division-project/
 division-bar
 vendor/composer/
 vendor/autoload.php
-
 node_modules
 npm-debug.log
 tagfield/
 reports/
 siteconfig/
 vendor/
+activedirectory/
+multivaluefield/
+queuedjobs/
