--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,16 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.2",
-		"silverstripe/cms": "3.5.*@stable",
-		"silverstripe/framework": "3.5.*@stable",
+		"silverstripe/cms": "3.6.*@stable",
+		"silverstripe/framework": "3.6.*@stable",
 		"silverstripe-themes/simple": "*",
 		"silverstripe/event-calendar": "*",
 		"colymba/gridfield-bulk-editing-tools": "*",
 		"silverstripe/tagfield": "*",
 		"md/division-bar" : "*",
-		"unclecheese/betterbuttons" : "1.3.*"
+		"unclecheese/betterbuttons" : "1.3.*",
+		"silverstripe/activedirectory" : "3.*"
+
 	},
 	"config": {
 		"process-timeout": 600	
@@ -20,6 +22,11 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
+
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
 
         }
     ]
