--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 		"silverstripe/tagfield": "*",
 		"md/division-bar" : "*",
 		"unclecheese/betterbuttons" : "1.3.*",
-		"silverstripe/activedirectory" : "3.*"
+		"silverstripe/activedirectory" : "3.*",
+		"md/division-analytics" : "1.*"
 
 	},
 	"config": {
@@ -27,6 +28,11 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
+
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
 
         }
     ]
