--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,16 @@
 		"colymba/gridfield-bulk-editing-tools": "*",
 		"silverstripe/tagfield": "*",
 		"md/uiowa-bar" : "*",
+		"jonom/focuspoint" : "*",
 		"md/division-bar" : "*",
 		"unclecheese/betterbuttons" : "1.3.*",
+		"undefinedoffset/sortablegridfield": "*",
 		"silverstripe/activedirectory" : "3.*",
 		"md/division-analytics" : "1.*"
 
 	},
 	"config": {
-		"process-timeout": 600	
+		"process-timeout": 600
 	},
 	"minimum-stability": "dev",
     "repositories": [
