--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "grunt-contrib-imagemin": "*",
     "grunt-contrib-concat": "*",
     "grunt-contrib-watch": "*"
+  },
+  "dependencies": {
+    "js-yaml": "^3.12.0",
+    "rimraf": "^2.6.2",
+    "string-width": "^2.1.1",
+    "which": "^1.3.1"
   }
 }
