--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-watch": "*"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "js-yaml": "^3.12.0",
     "rimraf": "^2.6.2",
     "string-width": "^2.1.1",
