--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"md/division-bar" : "*",
 		"unclecheese/betterbuttons" : "1.3.*",
 		"undefinedoffset/sortablegridfield": "*",
-		"silverstripe/activedirectory" : "3.*",
+		"md/activedirectory" : "3.*",
 		"md/division-analytics" : "1.*"
 
 	},
