--- a/composer.json
+++ b/composer.json
@@ -1,46 +1,48 @@
 {
-	"name": "silverstripe/installer",
-	"description": "The SilverStripe Framework Installer",
-	"require": {
-		"php": ">=5.3.2",
-		"silverstripe/cms": "3.7.*@stable",
-		"silverstripe/framework": "3.7.*@stable",
-		"silverstripe-themes/simple": "*",
-		"silverstripe/event-calendar": "*",
-		"colymba/gridfield-bulk-editing-tools": "*",
-		"silverstripe/tagfield": "*",
-		"md/uiowa-bar" : "dev-2.x-ss3",
-		"jonom/focuspoint" : "*",
-		"md/division-bar" : "*",
-		"unclecheese/betterbuttons" : "1.3.*",
-		"undefinedoffset/sortablegridfield": "*",
-		"md/activedirectory" : "3.*",
-		"md/division-analytics" : "1.*"
+    "name": "silverstripe/installer",
+    "description": "The SilverStripe Framework Installer",
+    "require":
+    {
+        "php": ">=5.3.2",
+        "silverstripe/cms": "3.7.*@stable",
+        "silverstripe/framework": "3.7.*@stable",
+        "silverstripe-themes/simple": "*",
+        "silverstripe/event-calendar": "*",
+        "colymba/gridfield-bulk-editing-tools": "*",
+        "silverstripe/tagfield": "*",
+        "md/uiowa-bar": "dev-2.x-ss3",
+        "jonom/focuspoint": "*",
+        "md/division-bar": "*",
+        "unclecheese/betterbuttons": "1.3.*",
+        "undefinedoffset/sortablegridfield": "*",
+        "md/activedirectory": "3.*",
+        "md/division-analytics": "1.*",
+        "silverstripe/staticpublishqueue": "*"
 
-	},
-	"config": {
-		"process-timeout": 600
-	},
-	"minimum-stability": "dev",
+    },
+    "config":
+    {
+        "process-timeout": 600
+    },
+    "minimum-stability": "dev",
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
+    {
+        "type": "vcs",
+        "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
 
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
+    },
+    {
+        "type": "vcs",
+        "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
+    },
+    {
+        "type": "vcs",
+        "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
 
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
+    },
+    {
+        "type": "vcs",
+        "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
 
-        }
-    ]
+    }]
 }
