--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,20 @@
-assets/*
-_ss_environment.php
-tools/phing-metadata
-silverstripe-cache
-.buildpath
-.project
-.settings
-.idea
-.DS_Store
+/silverstripe-cache/
+/.env
+/vendor/
+/themes/simple/
+/resources/
+/public/resources/
+/_resources/
+/public/_resources/
+/public/assets/
 .sass-cache/*
 *.scssc
-html/*
+.DS_Store
 dashboard/
-cms/
-blog/
-betterbuttons/
-event_calendar/
-gridfield-bulk-editing-tools/
-gridfieldrelationhandler/
-recaptcha/
-sortablegridfield/
-spamprotection/
-themes/simple/
-timepickerfield/
-userforms/
-widgets/
-framework/
-googlesitemaps/
-assets/
-division-project/
-division-bar
-vendor/composer/
-vendor/autoload.php
-node_modules
-npm-debug.log
-tagfield/
-reports/
-siteconfig/
 vendor/
-activedirectory/
-multivaluefield/
-queuedjobs/
-division-analytics
-uiowa-bar
-focuspoint
-.phpintel
+nocaptcha.yml
+smtp.yml
+/node_modules/
+/npm-debug.log
 /cache
-/gridfieldajaxrefresh/
-/staticpublishqueue/
+/.phpintel
