--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,74 @@
 {
-    "name": "silverstripe/installer",
-    "description": "The SilverStripe Framework Installer",
-    "require":
-    {
-        "php": ">=5.3.2",
-        "silverstripe/cms": "3.7.*@stable",
-        "silverstripe/framework": "3.7.*@stable",
-        "silverstripe-themes/simple": "*",
-        "silverstripe/event-calendar": "*",
-        "colymba/gridfield-bulk-editing-tools": "*",
-        "silverstripe/tagfield": "*",
-        "md/uiowa-bar": "dev-2.x-ss3",
-        "jonom/focuspoint": "*",
-        "md/division-bar": "*",
-        "unclecheese/betterbuttons": "1.3.*",
-        "undefinedoffset/sortablegridfield": "*",
-        "md/activedirectory": "3.*",
-        "md/division-analytics": "1.*",
-        "silverstripe/staticpublishqueue": "*"
-
-    },
-    "config":
-    {
-        "process-timeout": 600
-    },
-    "minimum-stability": "dev",
-    "repositories": [
-    {
-        "type": "vcs",
-        "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
-
-    },
-    {
-        "type": "vcs",
-        "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
-    },
-    {
-        "type": "vcs",
-        "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
-
-    },
-    {
-        "type": "vcs",
-        "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
-
-    }]
+  "name": "silverstripe/installer",
+  "type": "silverstripe-recipe",
+  "description": "The SilverStripe Framework Installer",
+  "require":
+  {
+    "php": ">=7.1.0",
+    "silverstripe/recipe-plugin": "^1.2",
+    "silverstripe/recipe-cms": "4.6.1@stable",
+    "silverstripe-themes/simple": "~3.2.0",
+    "silverstripe/login-forms": "4.1.2@stable",
+    "colymba/gridfield-bulk-editing-tools": "*",
+    "silverstripe/tagfield": "*",
+    "md/uiowa-bar": "2.*",
+    "jonom/focuspoint": "*",
+    "undefinedoffset/sortablegridfield": "*",
+    "md/saml": "dev-md",
+    "md/division-analytics": "*",
+    "silverstripe/staticpublishqueue": "*"
+  },
+  "require-dev":
+  {
+    "phpunit/phpunit": "^5.7",
+    "sminnee/phpunit-mock-objects": "^3.4.5"
+  },
+  "extra":
+  {
+    "project-files": [
+      "app/_config/*",
+      ".env.example"
+    ],
+    "public-files": [
+      "assets/*",
+      "favicon.ico"
+    ],
+    "resources-dir": "_resources",
+    "project-files-installed": [
+      "app/.htaccess",
+      "app/_config.php",
+      "app/_config/mimevalidator.yml",
+      "app/_config/mysite.yml",
+      "app/src/Page.php",
+      "app/src/PageController.php"
+    ],
+    "public-files-installed": [
+      ".htaccess",
+      "index.php",
+      "web.config"
+    ]
+  },
+  "repositories": [
+  {
+    "type": "vcs",
+    "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
+  },
+  {
+    "type": "vcs",
+    "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
+  },
+  {
+    "type": "vcs",
+    "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-saml"
+  },
+  {
+    "type": "vcs",
+    "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
+  }],
+  "config":
+  {
+    "process-timeout": 600
+  },
+  "prefer-stable": true,
+  "minimum-stability": "dev"
 }
