--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "php": ">=7.1.0",
     "silverstripe/recipe-plugin": "^1.2",
     "silverstripe/recipe-cms": "4.6.1@stable",
-    "silverstripe-themes/simple": "~3.2.0",
-    "silverstripe/login-forms": "4.1.2@stable",
+    "silverstripe/login-forms": "*",
     "colymba/gridfield-bulk-editing-tools": "*",
     "silverstripe/tagfield": "^2.4",
     "md/uiowa-bar": "2.*",
