--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "jonom/focuspoint": "*",
     "undefinedoffset/sortablegridfield": "*",
     "md/saml": "dev-md",
-    "md/division-analytics": "*",
+    "md/division-analytics": "1.3.*",
     "silverstripe/staticpublishqueue": "*"
   },
   "require-dev":
