--- a/composer.json
+++ b/composer.json
@@ -1,79 +1,76 @@
 {
-  "name": "silverstripe/installer",
-  "type": "silverstripe-recipe",
-  "description": "The SilverStripe Framework Installer",
-  "require":
-  {
-    "php": ">=7.1.0",
-    "silverstripe/recipe-plugin": "^1.2",
-    "silverstripe/recipe-cms": "4.6.1@stable",
-    "silverstripe/login-forms": "*",
-    "colymba/gridfield-bulk-editing-tools": "*",
-    "silverstripe/tagfield": "^2.4",
-    "md/uiowa-bar": "2.*",
-    "jonom/focuspoint": "*",
-    "undefinedoffset/sortablegridfield": "*",
-    "md/saml": "dev-md",
-    "md/division-analytics": "1.3.*",
-    "silverstripe/staticpublishqueue": "*"
-  },
-  "require-dev":
-  {
-    "phpunit/phpunit": "^5.7",
-    "sminnee/phpunit-mock-objects": "^3.4.5"
-  },
-  "extra":
-  {
-    "project-files": [
-      "app/_config/*",
-      ".env.example"
+    "name": "silverstripe/installer",
+    "type": "silverstripe-recipe",
+    "description": "The SilverStripe Framework Installer",
+    "require": {
+        "php": ">=7.1.0",
+        "silverstripe/recipe-plugin": "^1.2",
+        "silverstripe/recipe-cms": "4.6.1@stable",
+        "silverstripe/login-forms": "*",
+        "colymba/gridfield-bulk-editing-tools": "*",
+        "silverstripe/tagfield": "^2.4",
+        "md/uiowa-bar": "2.*",
+        "jonom/focuspoint": "*",
+        "undefinedoffset/sortablegridfield": "*",
+        "md/saml": "dev-md",
+        "md/division-analytics": "1.3.*",
+        "silverstripe/staticpublishqueue": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "sminnee/phpunit-mock-objects": "^3.4.5"
+    },
+    "extra": {
+        "project-files": [
+            "app/_config/*",
+            ".env.example"
+        ],
+        "public-files": [
+            "assets/*",
+            "favicon.ico"
+        ],
+        "resources-dir": "_resources",
+        "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/mimevalidator.yml",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "web.config"
+        ],
+        "expose": [
+            "themes/homecoming/css",
+            "themes/homecoming/images",
+            "themes/homecoming/fonts",
+            "themes/homecoming/js"
+        ]
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-saml"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
+        }
     ],
-    "public-files": [
-      "assets/*",
-      "favicon.ico"
-    ],
-    "resources-dir": "_resources",
-    "project-files-installed": [
-      "app/.htaccess",
-      "app/_config.php",
-      "app/_config/mimevalidator.yml",
-      "app/_config/mysite.yml",
-      "app/src/Page.php",
-      "app/src/PageController.php"
-    ],
-    "public-files-installed": [
-      ".htaccess",
-      "index.php",
-      "web.config"
-    ],
-    "expose": [
-      "themes/homecoming/css",
-      "themes/homecoming/images",
-      "themes/homecoming/fonts",
-      "themes/homecoming/js"
-    ]
-  },
-  "repositories": [
-  {
-    "type": "vcs",
-    "url": "https://github.com/StudentLifeMarketingAndDesign/division-bar"
-  },
-  {
-    "type": "vcs",
-    "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
-  },
-  {
-    "type": "vcs",
-    "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-saml"
-  },
-  {
-    "type": "vcs",
-    "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
-  }],
-  "config":
-  {
-    "process-timeout": 600
-  },
-  "prefer-stable": true,
-  "minimum-stability": "dev"
+    "config": {
+        "process-timeout": 600
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
