open graph, removed some duplicate fields

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -16,3 +16,6 @@ SilverStripe\Assets\Flysystem\AssetAdapter:
       'private': '0600'
 SilverStripe\Assets\InterventionBackend:
   flush_enabled: false
+Page:
+  extensions:
+    - OpenGraphExtension
