--- a/public/.htaccess
+++ b/public/.htaccess
@@ -34,6 +34,41 @@ ErrorDocument 500 /assets/error-500.html
     SetEnv HTTP_MOD_REWRITE On
     RewriteEngine On
 
+    ## CONFIG FOR STATIC PUBLISHING
+    # Cached content - sub-pages (site in the root of a domain)
+    RewriteCond %{REQUEST_METHOD} ^GET|HEAD$
+    RewriteCond %{QUERY_STRING} ^$
+    RewriteCond %{REQUEST_URI} /(.*[^/])/?$
+    RewriteCond %{DOCUMENT_ROOT}/cache/%1.html -f
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule .* /cache/%1.html [L]
+
+    # Cached content - homepage (site in root of a domain)
+    RewriteCond %{REQUEST_METHOD} ^GET|HEAD$
+    RewriteCond %{QUERY_STRING} ^$
+    RewriteCond %{REQUEST_URI} ^/?$
+    RewriteCond %{DOCUMENT_ROOT}/cache/index.html -f
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule .* /cache/index.html [L]
+
+    # Config for site in a subdirectory
+    # (remove the following four rules if site is on root of a domain. E.g. test.com rather than test.com/my-site)
+    # Cached content - sub-pages (site in sub-directory)
+    RewriteCond %{REQUEST_METHOD} ^GET|HEAD$
+    RewriteCond %{QUERY_STRING} ^$
+    RewriteCond %{REQUEST_URI} /(.*[^/])/(.*[^/])/?$
+    RewriteCond %{DOCUMENT_ROOT}/%1/cache/%2.html -f
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule .* cache/%2.html [L]
+
+    # Cached content - homepage (site in sub-directory)
+    RewriteCond %{REQUEST_METHOD} ^GET|HEAD$
+    RewriteCond %{QUERY_STRING} ^$
+    RewriteCond %{REQUEST_URI} ^/(.*[^/])/?$
+    RewriteCond %{DOCUMENT_ROOT}/%1/cache/index.html -f
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule .* cache/index.html [L]
+
     # Enable HTTP Basic authentication workaround for PHP running in CGI mode
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
@@ -44,11 +79,15 @@ ErrorDocument 500 /assets/error-500.html
     RewriteRule composer\.(json|lock) - [F,L,NC]
     RewriteRule (error|silverstripe|debug)\.log - [F,L,NC]
 
+
+    ## DYNAMIC CONFIG
+
     # Process through SilverStripe if no file with the requested name exists.
     # Pass through the original path as a query parameter, and retain the existing parameters.
     # Try finding framework in the vendor folder first
     RewriteCond %{REQUEST_URI} ^(.*)$
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule .* index.php
+
 </IfModule>
 ### SILVERSTRIPE END ###
