--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "undefinedoffset/sortablegridfield": "*",
         "md/saml": "dev-md",
         "md/division-analytics": "1.3.*",
-        "silverstripe/staticpublishqueue": "*"
+        "silverstripe/staticpublishqueue": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
