--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.8.*@stable",
         "silverstripe/login-forms": "*",
+        "silverstripe/blog": "*",
         "colymba/gridfield-bulk-editing-tools": "*",
         "silverstripe/tagfield": "^2.4",
         "md/uiowa-bar": "2.*",
@@ -14,7 +15,8 @@
         "undefinedoffset/sortablegridfield": "*",
         "md/saml": "dev-md",
         "md/division-analytics": "1.3.*",
-        "silverstripe/staticpublishqueue": "dev-master"
+        "silverstripe/staticpublishqueue": "dev-master",
+        "md/silverstripe-migration-tools": "dev-homecoming"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
@@ -58,6 +60,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-uiowa-bar"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-migration-tools"
         },
         {
             "type": "vcs",
